--- a/ex8.html
+++ b/ex8.html
@@ -15,9 +15,9 @@
     </div>
 
     <script>
-        let userName = "";
-        let userBalance = 0; // Espero que realmente tengas que cambiar el valor de esta variable... 😢
-        let currentDate = "";
+        let userName = "Robert Maynou";
+        let userBalance = 1000; // Espero que realmente tengas que cambiar el valor de esta variable... 😢
+        let currentDate = "05/03/2025";
 
         /* NO MODIFICAR A PARTIR DE AQUÍ */ 
         document.getElementById("userName").textContent = userName;
